Task-43333: Regression - bad display(alignment-UI glitches) of task changes in change history drawer. Problem: a bad alignment of the task changes in task's changes tab is displayed. Fix: Task changes should be well displayed with aligned.

--- a/task-management/src/main/webapp/skin/css/tasks.less
+++ b/task-management/src/main/webapp/skin/css/tasks.less
@@ -2899,6 +2899,7 @@
     .dateTime.caption {
       color: @greyColorLighten1;
       text-align: start;
+      margin-top: 0%;
       padding-left: 10px ~'; /** orientation=lt */ ';
       padding-right: 10px ~'; /** orientation=rt */ ';
     }
@@ -3018,8 +3019,10 @@
     }
     .changesText {
       max-width: 270px;
+      margin: 10px 6px;
+      padding-bottom: 0%;
       .assignDiv {
-        margin-top: -1px;
+        margin-top: -3%;
       }
     }
   }
